add issue8 article 2

--- a/issue8/article01/2023-02-25-art.mdx
+++ b/issue8/article01/2023-02-25-art.mdx
@@ -1,7 +1,10 @@
 ---
-title: '​Annotated Bibliography of Doctorate Degree
-​Music Theses in Nigeria (2011-2021)'
-slug: art
+title: '​Annotated Bibliography of Doctorate Degree ​Music Theses in Nigeria (2011-2021)'
+description: 'An upsurge in enrollment into postgraduate music courses in Nigeria in recent times, has resulted in an increasing number of research in different areas of music studies at the doctoral level.'
+slug: annotated-bibliography-of-doctorate-degree-music-theses-in-nigeria
+authors: [igbi, bekwenu, caluede]
+tags: [doctorate degree, theses, music education, music scholarship, Nigeria]
+date: 2023-02-25
 ---
 
 # ​Annotated Bibliography of Doctorate Degree ​Music Theses in Nigeria (2011-2021)
@@ -56,7 +59,7 @@ Ambrose Alli University, Ekpoma, Edo State, Nigeria'
 </div>
 
 <div className='abstract'>
-<p className='citation'>
+<div className='citation'>
 <strong>Citation:</strong> IGBI, Oghenemudiakevwe, Dafe B. Ekewenu, and Charles O. Aluede. 2023. "Annotated Bibliography of Doctorate Degree Music Theses in Nigeria (2011-2021)." [_Accelerando: Belgrade Journal of Music and Dance 8:1_](http://localhost:3000/articles/issue8/art)
 
 <strong>Acknowledgement:</strong>
@@ -64,27 +67,31 @@ Quite a number of people have been very helpful in gathering the data subsumed i
 this research. Prominent among them are Adeogun Oluranti, Femi Abiodun, Bosun Adekogbe,
 Bernadette Ugochukwu, Stephen Olusoji, Kayode Samuel and Chinazor Okpokwasili. The
 authors are greatly indebted to all of you and your efforts are here acknowledged.
-</p>
+</div>
+
 <div>
-<h4>Abstract</h4>
-<p>
-	An upsurge in enrollment into postgraduate music courses in Nigeria in recent
-	times, has resulted in an increasing number of research in different areas of
-	music studies at the doctoral level. This trend has enhanced manpower
-	development in Nigerian tertiary institutions. It is in this connection that
-	the paper seeks to provide current data on titles of research conducted at the
-	doctoral level in the field of Music in Nigeria in the last decade, (2011-
-	2021). This effort will help curtail the menace of recycling knowledge among
-	scholars, which has become a cause for concern in recent years. Data were
-	obtained through interviews, field investigation, the internet, and telephone
-	contacts. The paper highlights some of the challenges plaguing the study of
-	music in Nigeria at the postgraduate level, and thus provides relevant
-	recommendations.
+	<h4>Abstract</h4>
 	<div>
-		<strong>Keywords:</strong>
-		<i> doctorate degree, theses, music education, music scholarship, Nigeria</i>
+		An upsurge in enrollment into postgraduate music courses in Nigeria in
+		recent times, has resulted in an increasing number of research in different
+		areas of music studies at the doctoral level. This trend has enhanced
+		manpower development in Nigerian tertiary institutions. It is in this
+		connection that the paper seeks to provide current data on titles of
+		research conducted at the doctoral level in the field of Music in Nigeria in
+		the last decade, (2011- 2021). This effort will help curtail the menace of
+		recycling knowledge among scholars, which has become a cause for concern in
+		recent years. Data were obtained through interviews, field investigation,
+		the internet, and telephone contacts. The paper highlights some of the
+		challenges plaguing the study of music in Nigeria at the postgraduate level,
+		and thus provides relevant recommendations.
+		<div>
+			<strong>Keywords:</strong>
+			<i>
+				{' '}
+				doctorate degree, theses, music education, music scholarship, Nigeria
+			</i>
+		</div>
 	</div>
-</p>
 </div>
 
 </div>
@@ -117,17 +124,17 @@ However, the number of Nigerian music scholars with postgraduate degrees from ov
 ​This is an attestation that indeed the advent of postgraduate music studies in Nigeria has been of immense benefit. The following table offers a more elucidative insight into the various universities that offer postgraduate music programmes in Nigeria.
 
 <div className='figureBox'>
-<figure>
-	<img
-		src={require('@site/issue8/article01/igbi-et-al-table1_orig.png').default}
-		alt='Table 1: A table showing the various universities
+	<figure>
+		<img
+			src={require('@site/issue8/article01/igbi-et-al-table1.png').default}
+			alt='Table 1: A table showing the various universities
 ​ that offer postgraduate music programmes in Nigeria.'
-	/>
-	<figcaption>
-		Table 1: A table showing the various universities ​ that offer postgraduate
-		music programmes in Nigeria.
-	</figcaption>
-</figure>
+		/>
+		<figcaption>
+			Table 1: A table showing the various universities ​ that offer
+			postgraduate music programmes in Nigeria.
+		</figcaption>
+	</figure>
 </div>
 
 ### ​Authors and Titles of Completed Doctoral Theses in Music and Awarding Institutions
@@ -412,7 +419,7 @@ Theses: “Performance Styles and Roles of Nkwa Umuagbogho Music and Dance in So
 Madu, F. N. University of Delta, Agbor.  
 Theses: “Computer Applications in Music Pedagogy: A Study of its Use in Tertiary Institutions in Delta and Edo States, Nigeria”, 2021. Nnamdi Azikiwe University, Awka.
 
----
+____
 
 ## ​Some Challenges Facing Postgraduate Music Studies in Nigeria
 
@@ -470,7 +477,7 @@ There is no serious research endeavor that does not require huge capital or at l
 - One doctoral degree holder in Popular Music which forms 1.07
 - Two doctoral degree holders in Musicology which forms 2.15%.
 - Two doctoral degree holders in Music Media Studies which forms 2.15%.
-- This is further condensed into a graphic representation below indicating \* their areas specialty and the number of theses.
+- This is further condensed into a graphic representation below indicating their areas specialty and the number of theses.
 
 <div className='figureBox cols3'>
 	<figure>
@@ -507,14 +514,13 @@ There is no serious research endeavor that does not require huge capital or at l
 
 ​Results of the above analysis reveal the high patronage of ethnomusicology, theory and composition and music education as a stress area. This has led to a shortage of manpower in other areas. It is considered somewhat superfluous to go into any form of extraneous analysis of the obvious. From these graphs, it is advised that various music departments should endeavour to strive at a balance in their staffing position lest certain courses will be perfunctorily taught by persons whose expertise may be tangential to the students’ needs. For example, Music technology and Music therapy appears to be out of the current gamut of music scholarship in Nigeria. However, Idolor (2020) argues that a music scholar can be an expert in an area either by theory or by practice. Then in cases where there are shortages of man power, an individual with a doctoral degree in composition, for example, who has over the years acquire considerable practical experience in conducting for instance such a person should be able to read book article on the contemporary treads in the area he can now combine such effort with experience garnered over the years to supervise a postgraduate candidate. Same goes for other areas. This therefore means that while allocating courses to lecturers outside their areas of expertise should not be a challenge if the lecturer has gained sufficient practical and theoretical knowledge, having experts to handle such courses is still likely to have its benefits.
 
-​ It was not until the early and mid-2000s that Nigeria had experts at the doctoral level in composition and performance with Christian Onyeji (DMus, University of Pretoria) and Godwin Sadoh (DMA, University of Pittsburgh). Even at that, they were not produced in Nigeria. Till today, there are insignificant numbers of persons in areas like Conducting and Directing, Performance, Music Therapy, Music Media, and so on at the doctoral degree level in Nigeria. There are brilliant composers and performers like Akin Euba, Meki Nzewi, Arugha Ogisi, Oluranti Adeogun, Dan Agu, Laz Ekwueme, Joshua Uzoigwe, Emurobome Idolor, Timothy Eru and others who do not have university degrees in composition and performance, but have excelled in the art, and can also be referred to as experts in the areas. Music is both a theoretical and practical profession. Because of the practical experience garnered by scholars like Dan Agu, Emurobome Idolor, Ovaborhene Idamoyibo, Femi Adedeji, Arugha Ogisi, they have been able to supervise individuals in these creative areas of Music. Dan Agu, for instance, is a professor of ethnomusicology and composition – a rank he attained because of his superlative scholarly and creative output. But despite these, evidence from this research still shows the gross deficiency of manpower especially in the creative areas of music. 
+​It was not until the early and mid-2000s that Nigeria had experts at the doctoral level in composition and performance with Christian Onyeji (DMus, University of Pretoria) and Godwin Sadoh (DMA, University of Pittsburgh). Even at that, they were not produced in Nigeria. Till today, there are insignificant numbers of persons in areas like Conducting and Directing, Performance, Music Therapy, Music Media, and so on at the doctoral degree level in Nigeria. There are brilliant composers and performers like Akin Euba, Meki Nzewi, Arugha Ogisi, Oluranti Adeogun, Dan Agu, Laz Ekwueme, Joshua Uzoigwe, Emurobome Idolor, Timothy Eru and others who do not have university degrees in composition and performance, but have excelled in the art, and can also be referred to as experts in the areas. Music is both a theoretical and practical profession. Because of the practical experience garnered by scholars like Dan Agu, Emurobome Idolor, Ovaborhene Idamoyibo, Femi Adedeji, Arugha Ogisi, they have been able to supervise individuals in these creative areas of Music. Dan Agu, for instance, is a professor of ethnomusicology and composition - a rank he attained because of his superlative scholarly and creative output. But despite these, evidence from this research still shows the gross deficiency of manpower especially in the creative areas of music.
 
-_________________
+____
 
 ## Conclusion
 
 Data collected from the study reveals that music postgraduate studies in Nigeria have grown steadily over the years. The number of doctorate degree holders in Music who graduated during the period under study is indeed commendable. The challenges discussed in the paper are not insurmountable. Findings from the research reveal that majority of the doctorate degree holders specialized in ethnomusicology, music education and composition. The analysis reveals that scarcity of manpower in areas like performance, conducting, music media and music production in the period under review. One cannot also rule out the fact that there exists a symbiotic relationship between African music, composition and performance as stress areas. In order to reduce the rate of lopsidedness towards African musicology, the paper recommends that prospective postgraduate students should consider running their postgraduate programmes in diverse areas of specialization within the music profession. This will give room for diversity in the profession, help in job creation, and leave prospective postgraduate students with different choices in choosing an area to specialize in. Universities who have few areas of specialization in music should also review their programmes to include other areas. However, while efforts should be made to get qualified manpower with doctorate degrees in different areas of specialization, experienced scholars who have acquired sufficient knowledge through practice could also be engaged to supervise students. In situations where such are not readily available, there should be collaboration with expert lecturers from elsewhere to teach and supervise students. If many universities had adopted this approach long ago, perhaps, by now, postgraduate studies in music would have produced more manpower to meet the deficit of competent lecturers of Music in Nigeria. As a follow up to this study, the Association of Nigerian Musicologists should urgently host an online database of all the doctorate degree theses titles and possibly their abstracts, to enable quick access by researchers and scholars.
-
 
 ## References
 
@@ -528,8 +534,9 @@ Data collected from the study reveals that music postgraduate studies in Nigeria
 8. Ogisi, A. A. 2015. ‘‘Optimizing Postgraduate Music Studies in Nigeria’’. In _Studies in Nigerian Music: Music and Society in Nigeria, 133-141._ Edited by A. A. Ogisi. Lagos: Amfitop Publishers.
 9. Omojola, B. 1995. _Nigerian Art Music._ Ibadan: IFRA
 </div>
+
 <div className='up'>
 <a href='#top'>![Back to top](../up.png)</a>
 </div>
-</div>
 
+</div>
