--- a/issue8/article02/2023-02-24-art.mdx
+++ b/issue8/article02/2023-02-24-art.mdx
@@ -1,8 +1,9 @@
 ---
 title: 'Musico-Metaphor: ​The  Man In The Long Black Coat'
-slug: musico-metaphor:-the--man-in-the-long-black-coat
-authors: []
-tags: []
+description: 'The use of figurative speech in a language is often a conscious action that a speaker uses for several reasons, but most importantly to have a desired effect on the sensibility of the listener.'
+slug: musico-metaphor-the-man-in-the-long-black-coat
+authors: [ealemede, gbenga, adetayo]
+tags: [language, music, metaphor, listeners, artistic freedom, song, meaning]
 date: 2023-02-24
 ---
 
@@ -33,7 +34,7 @@ export function Name({ author, affil, email }) {
 	);
 }
 
-<div className='mt-12 flex flex-col items-center'>
+<div className='authors'>
 <Name
 	author='Emmanuel Oyetunji Alemede'
 	affil='Music Department, Federal College of Education, Eha-Amufu, Enugu state'
@@ -237,12 +238,11 @@ Oh Lord
 	src='https://www.youtube.com/embed/OYp9G7AfvbE?si=4dE_5koPX5e2L8wK'
 	title='YouTube video player'
 	frameborder='0'
-	allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share'
+	allow='accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share'
 	referrerpolicy='strict-origin-when-cross-origin'
-	allowfullscreen
 ></iframe>
 
-_________________
+---
 
 ## References
 
@@ -278,8 +278,7 @@ _________________
 </div>
 
 <div className='up'>
-<a href='#top'>![Back to top](../up.png)</a>
+	<a href='#top'>![Back to top](../up.png)</a>
 </div>
-
 
 </div>
