add issue 8 art 7

--- a/blog/Issue9/2024-02-27-art.md
+++ b/blog/Issue9/2024-02-27-art.md
@@ -2,7 +2,7 @@
 title: 'Accelerando: BJMD, ISSUE 9'
 description: 'Accelerando: BJMD, Issue 9'
 slug: issue9
-hide_table_of_contents: false
+hide_table_of_contents: true
 ---
 
 # Accelerando: BJMD, ISSUE 9
