--- a/issue8/article03/2023-02-23-art.mdx
+++ b/issue8/article03/2023-02-23-art.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Aesthetics and Utilitarian Essence ​of Selected Yorùbá Folktales'
 description: 'Folktales constitute one of the oldest traditional forms of education based on the method of delivery through oral tradition. Among the Yorùbá, folktale is a viable medium for transmission of cultural values ...'
-slug: aesthetics-and-utilitarian-essence-of-selected-yorùbá-folktales
+slug: aesthetics-of-selected-yoruba-folktales
 authors: [omolaye]
 tags:
   [
