--- a/issue8/article06/2023-02-20-art.mdx
+++ b/issue8/article06/2023-02-20-art.mdx
@@ -1,6 +1,6 @@
 ---
 title: '​Musical Sound Advocacy as Remedy for Institutional Decay in Nigeria'
-slug: musical-sound-advocacy-as-remedy
+slug: musical-sound-advocacy-nigeria
 description: '​In many world cultures, the place of music cannot be underestimated. Music has been used in diverse ways to correct, build, inform and educate people in all communities. Nigeria, as a nation, is not left out of these practices...'
 authors: [adekogbe]
 tags:
@@ -456,4 +456,7 @@ The paper also examined the various organs of governmental institutions and the 
 
 </div>
 
+<div className='up'>
+	<a href='#top'>![Back to top](../up.png)</a>
+</div>
 </div>
