add issue 7 article 2 and 3

--- a/blog/issue8/2023-02-27-art.md
+++ b/blog/issue8/2023-02-27-art.md
@@ -61,7 +61,7 @@ Sunday Olufemi Akande
 
 Benjamin Obeghare Izu and Alethea de Villiers
 
-[Read Online](https://docusaurus.io) [Download](https://drive.google.com/file/d/1ii0ROpBko2GZreu-w2wm76z5ssoNNW8e/view?usp=share_link)
+[Read Online](/articles/issue8/amaqghira-as-a-dancer-singer-and-drummer) [Download](https://drive.google.com/file/d/1ii0ROpBko2GZreu-w2wm76z5ssoNNW8e/view?usp=share_link)
 
 ### The Meeting of Eastern and Western Culture in the 20th Century
 
@@ -69,4 +69,4 @@ Benjamin Obeghare Izu and Alethea de Villiers
 
 Yuanyuan Guo
 
-[Read Online](https://docusaurus.io) [Download](https://drive.google.com/file/d/13GfkFAKK4SOBVDyb1on6IoUWS4QJl7aO/view?usp=share_link)
+[Read Online](/articles/issue8/the-interpretation-of-butterfly-lovers-violin-concerto) [Download](https://drive.google.com/file/d/13GfkFAKK4SOBVDyb1on6IoUWS4QJl7aO/view?usp=share_link)
