--- a/issue8/article02/2023-02-24-art.mdx
+++ b/issue8/article02/2023-02-24-art.mdx
@@ -270,10 +270,10 @@ Oh Lord
 
 <div className='additional_resources'>
 
-[Encyclopaedia Britannica](https://www.britannica.com/topic/aparthied)
-[History of Lucky Dube](https://en.wikipedia.org/wiki/Lucky_Dube)
-[10 great metaphor from popular music](https://literarydevices.net/10-great-metaphors-from-popular-music)
-[Lucky Dube, Crazy World Song, youtube](https://youtu.be/OYp9G7AfvbE)
+- [Encyclopaedia Britannica](https://www.britannica.com/topic/aparthied)
+- [History of Lucky Dube](https://en.wikipedia.org/wiki/Lucky_Dube)
+- [10 great metaphor from popular music](https://literarydevices.net/10-great-metaphors-from-popular-music)
+- [Lucky Dube, Crazy World Song, youtube](https://youtu.be/OYp9G7AfvbE)
 
 </div>
 
