--- a/issue8/article03/2023-02-23-art.mdx
+++ b/issue8/article03/2023-02-23-art.mdx
@@ -376,15 +376,52 @@ Almost all human endeavours in today’s context are being digitised to meet the
 ​This study, therefore, recommends that African folktales, being one of the mediums where indigenous wisdom and moral values are passed and transmitted be revitalised and digitalised, so that the practice will continue to impact positively to the younger generation. In addition, once adequate attention is given to this African cultural practice, it is certain that the residue of knowledge passed on to children through African folktales would be preserved from possible extinction.
 
 <div className='figureBox'>
-	<figure>
-		<img
-			src={require('@site/issue8/article03/omolaye-table1.png').default}
-			alt='Table 1. Oral Interviews: Names of Informant and their Locations'
-		/>
-		<figcaption>
-			**_Table 1._** Oral Interviews: Names of Informant and their Locations
-		</figcaption>
-	</figure>
+	<table>
+		<caption>**_Table 1._** Oral Interviews: Names of Informant and their Locations</caption>
+	<thead>
+		<tr>
+			<th>S/N</th>
+			<th>Name</th>
+			<th>Age</th>
+			<th>Sex</th>
+			<th>Folktales retrieved in Yoruba</th>
+			<th>Location</th>
+			<th>Date</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<th>1.</th>
+			<td>Pa. Oduremi Eluwole</td>
+			<td>80yrs</td>
+			<td>Male</td>
+			<td><span>Ijapa àti Babaláwo (Tortoise and The Herbalist)</span></td>
+			<td>Oke-Ola Modakeke</td>
+			<td>12/03/22</td>
+		</tr>
+		<tr>
+			<th>2.</th>
+			<td>Elder Adeoye Olarewaju</td>
+			<td>75yrs</td>
+			<td>Male</td>
+			<td><span>Asin àti Ökéré (The Shrew rat and Squirrel)</span></td>
+			<td>Akodi-Aga, Ile-Ife</td>
+			<td>03/02/22</td>
+		</tr>
+		<tr>
+			<th>4.</th>
+			<td>Mr. Adisa Yusufu</td>
+			<td>68yrs</td>
+			<td>Male</td>
+			<td><span>Ijapa àti Erin (Tortoise  and Elephant)</span></td>
+			<td>Oke-Oniti, Oshogbo</td>
+			<td>26/01/22 </td>
+		</tr>
+	</tbody>
+</table>
+
+		
+		
 </div>
 
 ---
