--- a/issue8/article07/2023-02-19-art.mdx
+++ b/issue8/article07/2023-02-19-art.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Towards Revitalisation of Yoruba Folk Opera ​for Preservation of Yoruba Culture'
 slug: towards-revitalisation-of-yoruba-folk-opera
-description: ''
+description: 'This research advocates for reviving Yoruba folk opera for preserving Yoruba culture. The study used the data obtained from one hundred audience who watched a folk opera, Oba Waja (The King is Dead), written by Duro Ladipo, and staged by students of Olabisi Onabanjo University, Ago Iwoye.'
 authors: [akande]
-tags: []
+tags: [revitalisation, Yoruba, Folk Opera, preservation of culture]
 ---
 
 # Towards Revitalisation of Yoruba Folk Opera ​for Preservation of Yoruba Culture
@@ -76,9 +76,14 @@ export function Name({ author, affil, email }) {
 		subtitles for the sake of Yoruba language learners.
 		<div>
 			<strong>Keywords:</strong>
-			<i> revitalisation, Yoruba, Folk Opera, preservation of culture</i>
+			<i>
+				{' '}
+				revitalisation, Yoruba, Folk Opera, preservation of culture
+			</i>
 		</div>
-	</div>
+
+    </div>
+
 </div>
 
 </div>
@@ -169,8 +174,8 @@ Also, Ayanfe, written by April Atinuke Koyejo, is an opera loosely based on Yoru
 ## Data Analysis and Discussion of Findings
 
 <div className='figureBox'>
-	<figure>
 		<table>
+		<caption>Table 1. Gender</caption>
 			<thead>
 				<tr>
 					<th>Gender</th>
@@ -196,15 +201,13 @@ Also, Ayanfe, written by April Atinuke Koyejo, is an opera loosely based on Yoru
 				</tr>
 			</tbody>
 		</table>
-		<figcaption>Table 1. Gender</figcaption>
-	</figure>
 </div>
 
 ​In the above table, the frequency and percentage distribution of the respondents’ gender is outlined. Of the one hundred respondents, twenty more representing twenty-nine percent were males. While the remaining seventy-one representing seventy-one percent were females.
 
 <div className='figureBox'>
-	<figure>
 		<table>
+		<caption>Table 2. Statistics on educational status</caption>
 			<thead>
 				<tr>
 					<th>Educational Status</th>
@@ -245,8 +248,7 @@ Also, Ayanfe, written by April Atinuke Koyejo, is an opera loosely based on Yoru
 				</tr>
 			</tbody>
 		</table>
-		<figcaption>Table 2. Statistics on educational status</figcaption>
-	</figure>
+		
 </div>
 
 In the above table, the frequency and percentage distribution of respondent’s educational qualifications is outlined. From one hundred respondents, twenty percent 20% had Ph.D, fourteen percent 14% had MA/M.Sc, twelve percent 12% were holders of B.Sc./B. A, fifty persons’ percent were undergraduates. Those with other qualifications not specified in the questionnaire were ten, accounting for 10 percent.
@@ -300,7 +302,7 @@ From the findings above, it is evident that the Nigerian Film Industry has not s
 
 ​There are various tourist attractions, cultures, etc., that can be turned into Opera. Yoruba people have a promising future in this regard, if only our film industry develops. And until that is done, Yoruba people might not have a place culturally in the world.
 
-_________________
+---
 
 ## Conclusion
 
